2009-05-15  Tobias C. Rittweiler  <tcr@freebits.de>

	Move font-lock-magic into contrib/slime-fontifying-fu.el.

	* slime.el (slime-highlight-suppressed-forms),
	(slime-reader-conditional-face),
	(slime-search-suppressed-forms-internal),
	(slime-search-suppressed-forms),
	(slime-search-directly-preceding-reader-conditional),
	(slime-extend-region-for-font-lock),
	(slime-compute-region-for-font-lock),
	(slime-activate-font-lock-magic): Moved.

2009-05-15  Tobias C. Rittweiler  <tcr@freebits.de>

	Rewrote some parts of the font-lock-magic in face of its fragility
	over the last days. Hopefully it'll be better now.

	* slime.el (slime-region-for-tlf-at-point): Removed. Not needed
	anymore.
	(slime-region-for-extended-tlf-at-point): Removed.
	(slime-search-backward-reader-conditional): Removed.
	(slime-search-directly-preceding-reader-conditional):
	New. Similiar to the above.
	(slime-extend-region-for-font-lock): Display bug message when
	error is caught.
	(slime-compute-region-for-font-lock): Rewritten.
	([test] font-lock-magic): Another test case.

2009-05-14  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-region-for-tlf-at-point): Use
	`(end-of-defun) (backward-sexp)' rather than
	`(end-of-defun) (beginning-of-defun' to go to the start of the
	current defun. The latter would fail on "() (a\nb\nc)".

2009-05-14  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-compute-region-for-font-lock): Fix typo.

2009-05-13  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-search-suppressed-forms): On errors, we have to
	continue the search, otherwise there's a chance that we miss
	reader conditionals in the current font-lock region.
	(slime-search-backward-reader-conditional): New. Extracted from
	`slime-region-for-extended-tlf-at-point'.
	(slime-region-for-extended-tlf-at-point): Use it.
	(slime-font-lock-region): Removed.
	(slime-font-lock-region-changed-p): Removed.
	(slime-extend-region-for-font-lock): Simplified.